# EGH490_Research_Project

./: README.md  pyproject.toml
egh490/: __init__.py
egh490/models/: __init__.py  base.py  ensemble.py  trainer.py
egh490/utils/: __init__.py  config.py  device.py  io.py  logging.py  seeding.py
tests/: test_base_model.py  test_ensemble.py  test_trainer.py  test_utils.py
